fix bq and spacing

--- a/src/app.css
+++ b/src/app.css
@@ -11,10 +11,10 @@ h5 { @apply text-base md:text-lg font-bold my-4; }
 h6 { @apply text-sm md:text-base font-bold my-4; }
 a { @apply text-sky-700 dark:text-sky-300 underline; }
 article { @apply p-2 sm:p-4 text-slate-700 dark:text-slate-300; }
-p { @apply my-4 text-sm sm:text-base; }
+p { @apply my-2 text-sm sm:text-base; }
 code { @apply bg-slate-200 dark:bg-slate-800 p-0.5 rounded-md; }
 pre { @apply bg-slate-200 dark:bg-slate-800 p-4 rounded-md my-4 overflow-x-auto; }
-blockquote { @apply bg-slate-200 text-gray-600 dark:bg-slate-800 dark:text-gray-400 p-4; }
+blockquote { @apply border-l-4 border-slate-700 pl-4 my-2; }
 hr { @apply my-4 border-gray-300 dark:border-gray-700; }
 ul { @apply list-disc ml-6; }
 ol { @apply list-decimal ml-6; }
